@@ -91,6 +91,7 @@ public:
 	bool mouse_aim;
 	bool no_mouse;
 	int joy_deadzone;
+	float touch_scale;
 
 	// Interface Settings
 	bool combat_text;
